senior not rising senior

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<div class="container-fluid">
 				<div class="col-xs-12 col-md-8 bottom-buffer"> <!-- shrink font-size at less than ~800 -->
 					<p>
-						I'm a rising senior at Duke double majoring in Statistics and Computer Science! I'm a driven learner with experience ranging from Software Engineering at Microsoft (and at a startup) to Academic Research in Machine Learning. 
+						I'm a senior at Duke double majoring in Statistics and Computer Science! I'm a driven learner with experience ranging from Software Engineering at Microsoft (and at a startup) to Academic Research in Machine Learning. 
 					</p>
 					<p>
 						My interests vary across Data Science and Software, but overall I'm interested in making the world a better place through technology.
